# 08.fractal-cuda

./: .gitignore  CMakeLists.txt  fractal_serial.cpp  kernel.cu  main.cpp  main2.cpp
